--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SyncMe | Sync Your Lyrics</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <textarea id="original_lrc" cols="70" rows="20"></textarea>
-    <p id="timestamp">00:00:00</p><button id="start">Start</button><button id="reset">Reset</button>
+    <p id="timestamp">00:00:00</p>
+    <button id="start">Start</button><button id="reset">Reset</button>
     <div>
-        <input type="text" id="verse" style="width: 400px">
-        <button id="sync">Sync it</button>
+      <input type="text" id="verse" style="width: 400px" />
+      <button id="sync">Sync it</button>
     </div>
-    <textarea id="synced_lrc" cols="70" rows="20"></textarea><br>
+    <textarea id="synced_lrc" cols="70" rows="20"></textarea><br />
     <button id="cpbtn">Copy Synced Lyrics!</button>
     <script src="./app.js"></script>
-</body>
+  </body>
 </html>
