--- a/index.html
+++ b/index.html
@@ -7,14 +7,31 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <textarea id="original_lrc" cols="70" rows="20"></textarea>
-    <p id="timestamp">00:00:00</p>
+    <h2>SyncMe <span>| Sync Your Lyrics</span></h2>
+    <textarea
+      id="original_lrc"
+      cols="35"
+      rows="10"
+      placeholder="Paste Lyrics Here"
+    ></textarea>
+    <p id="timestamp">00:00.00</p>
     <button id="start">Start</button><button id="reset">Reset</button>
     <div>
-      <input type="text" id="verse" style="width: 400px" />
-      <button id="sync">Sync it</button>
+      <input
+        type="text"
+        id="verse"
+        style="width: 400px"
+        placeholder="Next Line"
+      />
+      <button id="sync">Time it</button>
     </div>
-    <textarea id="synced_lrc" cols="70" rows="20"></textarea><br />
+    <textarea
+      id="synced_lrc"
+      cols="35"
+      rows="10"
+      placeholder="Timed Lyrics Will Appear Here"
+    ></textarea
+    ><br />
     <button id="cpbtn">Copy Synced Lyrics!</button>
     <script src="./app.js"></script>
   </body>
