changed styling on title

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SyncMe | Sync Your Lyrics</title>
+    <title>SYNCME | Sync Your Lyrics</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h2>SyncMe <span>| Sync Your Lyrics</span></h2>
+    <h2>SYNCME <span>| Sync Your Lyrics</span></h2>
     <textarea
       id="original_lrc"
       cols="35"
