--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         type="text"
         id="verse"
         style="width: 400px"
-        placeholder="Next Line"
+        placeholder="hit 'Time it' when this line is being sung"
       />
       <button id="sync">Time it</button>
     </div>
@@ -47,6 +47,7 @@
     <div class="modal">
       Hit Start Button to Start Timer and Audio simultaneously
     </div>
+    <br /><a href="https://github.com/5tupidmuffin/SyncMe">Github Repo</a>
     <script src="./app.js"></script>
   </body>
 </html>
