--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
+<!-- 
+   You wait and wait for happiness, and when finally you can't bear it any longer,
+   you rush out of the house, only to hear later that a marvelous 
+   happiness arrived the following day at the home you had abandoned, and now it was too late. 
+   Sometimes happiness arrives one night too late. Happiness..
+ -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A Website to Generate Time-Synced Lyrics"
+    />
     <title>SYNCME | Sync Your Lyrics</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
